--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,23 +1,27 @@
-﻿@using hospital.Entity;
-
-@model List<Row>
-
-<h1>Welcome to DB</h1>
-
-<table class="table">
+﻿<table class="table table-dark">
   <thead>
     <tr>
-      <th scope="col">Full Name</th>
-      <th scope="col">Username</th>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
     </tr>
   </thead>
-  @foreach (var user in Model)
-  {
-    <tbody>
-        <tr>
-        <td>@user.FullName</td>
-        <td>@user.Phone</td>
-        </tr>
-    </tbody>     
-  }
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+    </tr>
+  </tbody>
 </table>
