--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,17 +14,7 @@ html {
 }
 
 body {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  margin-bottom: 60px;
   background-image: url(https://wallpapercave.com/wp/wp8390008.png);
 }
 
