--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,27 +1,22 @@
-﻿<table class="table table-dark">
+﻿@model List<hospital.ViewModels.RowViewModel>
+
+<table class="table table-dark shadow mt-5 mb-3 border border-5 border-light rounded-3">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Ф.И.О</th>
+      <th scope="col">Телефон Номер</th>
+      <th scope="col">Ваша очередь</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-    </tr>
+
+    @foreach (var user in Model)
+    {
+      <tr>
+        <td>@user.Fullname</td>
+        <td>(XX) XXX @user.Phone.Substring(user.Phone.Length - 4)</td>
+        <td>@user.CreatedAt.ToString("MMM dd, yyyy HH:mm")</td>
+      </tr>
+    }
   </tbody>
 </table>
