--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<hospital.ViewModels.RowViewModel>
 
-<table class="table table-dark shadow mt-5 mb-3 border border-5 border-light rounded-3">
+<table class="table table-bordered border-primary">
   <thead>
     <tr>
       <th scope="col">Ф.И.О</th>
@@ -15,8 +15,9 @@
       <tr>
         <td>@user.Fullname</td>
         <td>(XX) XXX @user.Phone.Substring(user.Phone.Length - 4)</td>
-        <td>@user.CreatedAt.ToString("MMM dd, yyyy HH:mm")</td>
+        <td>@user.CreatedAt.ToString("MMM dd, HH:mm")</td>
       </tr>
     }
   </tbody>
 </table>
+<a class="btn btn-primary" href="/Home/TakeRow">Взять Очередь</a>
