--- a/Views/Home/ShowRow.cshtml
+++ b/Views/Home/ShowRow.cshtml
@@ -1,20 +1,24 @@
 @model hospital.ViewModels.RowViewModel;
 
-<form class="form-signin" method="get" asp-action="ShowRow" asp-controller="Home">
-    <table class="table table-dark shadow mt-5 mb-3 border border-5 border-light rounded-3">
-        <thead>
-            <tr>
-                <th scope="col">Ф.И.О</th>
-                <th scope="col">Телефон Номер</th>
-                <th scope="col">Ваша очередь</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>@Model.Fullname</td>
-                <td>@Model.Phone</td>
-                <td>@Model.CreatedAt.ToString("MMM dd, yyyy HH:mm")</td>
-            </tr>
-        </tbody>
-    </table>
-</form>
+@{
+    Layout = "_Layout1";
+}
+
+<table class="table table-bordered border-primary">
+    <thead>
+        <tr>
+            <th scope="col">Ф.И.О</th>
+            <th scope="col">Телефон Номер</th>
+            <th scope="col">Ваша очередь</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>@Model.Fullname</td>
+            <td>@Model.Phone</td>
+            <td>@Model.CreatedAt.ToString("MMM dd, HH:mm")</td>
+        </tr>
+    </tbody>
+</table>
+
+<a class="btn btn-primary" href="/">На Главную</a>
